--- a/projeto_capitura.html
+++ b/projeto_capitura.html
@@ -29,7 +29,7 @@
 			<img src="fotos/gato.jpg" class="picture">
 			<div class="descripition">
 				<h3>O Palestrante</h3>
-				<p>Paulo Pietro é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepare-se para sair do evento com uma nova visão do que é possível ser feito para o seu negócio decolar.</p>
+				<p>Ricardito Jr. é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepare-se para sair do evento com uma nova visão do que é possível ser feito para o seu negócio decolar.</p>
 				<p>Formado em Marketing pela Universidade Federal do Rio de Janeiro, é fundador da MakeUp a empesa vencedora dos últimos 5 prêmios Marketing.</p>
 				
 			</div>
